# mcp-danbooru-characters

./: .gitattributes  .gitignore  README.md  pyproject.toml
.claude/: settings.json
data/tag_vocab/: meta.json
scripts/: build_tag_vocab.py  eval_tag_vocab.py
src/mcp_danbooru/: __init__.py  related_tags.py  server.py  tag_search.py
tests/: test_tag_search.py
