[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-danbooru-characters"
version = "0.1.0"
description = "MCP server for Danbooru anime character tag lookup — Anima image generation helper"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27.0",
]

[project.scripts]
mcp-danbooru = "mcp_danbooru.server:run"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_danbooru"]

[tool.hatch.build.targets.wheel.sources]
"src/mcp_danbooru" = "mcp_danbooru"
